<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="RESERVATION "
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/textViewName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:hint="Enter Name"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/textViewContact"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:hint="Enter Contact Number"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="serif"
            android:text="@string/textViewPeople"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:hint="Number of Pax"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSeatArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="serif"
            android:text="@string/textViewSeatArea"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CheckBox" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/textViewDateTime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:calendarViewShown="false"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>
